@@ -24,6 +24,7 @@
 #include "helper.h"
 #include "global.h"
 #include "preferences.h"
+#include "mplayerversion.h"
 
 #if USE_QPROCESS
 #include <QProcess>
@@ -72,6 +73,7 @@ void InfoReader::getInfo() {
 	vo_list.clear();
 	ao_list.clear();
 	demuxer_list.clear();
+	mplayer_svn = -1;
 
 	run("-identify -vo help -ao help -demuxer help -vc help -ac help");
 
@@ -191,6 +193,10 @@ void InfoReader::readLine(QByteArray line) {
 		reading_type = VC;
 		waiting_for_key = FALSE;
 		qDebug("InfoReader::readLines: found key: vc");
+	}
+
+	if (line.startsWith("MPlayer ")) {
+		mplayer_svn = MplayerVersion::mplayerVersion(line);
 	}
 }
 
